Perkin-UAT/force-app/main/default/objects/INF_Contracts_Req__c/INF_Contracts_Req__c.object-meta.xml
<CustomObject>
    <description>Informatics contract request</description>
    <label>Contract Request</label>
    <nameField>
        <label>Old Contracts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>