Perkin-UAT/force-app/main/default/objects/INF_Contracts_Req__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To (Contract Team use only)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ray Lowe</fullName>
            </value>
            <value>
                <fullName>Darlene Willard</fullName>
            </value>
            <value>
                <fullName>Lisa Hurley</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>