Perkin-UAT/force-app/main/default/objects/INF_Contracts_Req__c/fields/Comment_INF__c.field-meta.xml
<CustomField>
    <fullName>Comment_INF__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>