Perkin-UAT/force-app/main/default/objects/INF_Contracts_Req__c/fields/Company_Details__c.field-meta.xml
<CustomField>
    <fullName>Company_Details__c</fullName>
    <inlineHelpText>Address required</inlineHelpText>
    <label>Customer Address (full address required)</label>
    <type>TextArea</type>
</CustomField>