Perkin-UAT/force-app/main/default/objects/INF_Contracts_Req__c/fields/Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Contact_Details__c</fullName>
    <label>Contact Details</label>
    <type>TextArea</type>
</CustomField>