Perkin-UAT/force-app/main/default/objects/INF_Contracts_Req__c/fields/Contract_Request_Email__c.field-meta.xml
<CustomField>
    <fullName>Contract_Request_Email__c</fullName>
    <defaultValue>&quot;Informatics.ContractsRequest@PERKINELMER.COM&quot;</defaultValue>
    <label>Contract Request Email</label>
    <type>Email</type>
</CustomField>