Perkin-UAT/force-app/main/default/objects/INF_Contracts_Req__c/fields/Contracts_Name__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Name__c</fullName>
    <label>Contracts Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-Prem License Agreement</fullName>
            </value>
            <value>
                <fullName>SaaS License Agreement</fullName>
            </value>
            <value>
                <fullName>Services Agreement</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>SOW</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>RFI/RFQ/RFP</fullName>
            </value>
            <value>
                <fullName>Vendor Form</fullName>
            </value>
            <value>
                <fullName>Security Questionnaire</fullName>
            </value>
            <value>
                <fullName>SOC2</fullName>
            </value>
            <value>
                <fullName>Vendor Qualification</fullName>
            </value>
            <value>
                <fullName>Data Protection Addendum</fullName>
            </value>
            <value>
                <fullName>VPAT / HECVAT</fullName>
            </value>
            <value>
                <fullName>Audit form</fullName>
            </value>
            <value>
                <fullName>W-9</fullName>
            </value>
            <value>
                <fullName>Cert. Ltr.</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Sole Source</fullName>
            </value>
            <value>
                <fullName>Distribution Agreement</fullName>
            </value>
            <value>
                <fullName>Cert. of Ins.</fullName>
            </value>
            <value>
                <fullName>Tax Cert.</fullName>
            </value>
            <value>
                <fullName>Activation override</fullName>
            </value>
            <value>
                <fullName>Review for Team</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>