Perkin-UAT/force-app/main/default/objects/INF_Contracts_Req__c/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <inlineHelpText>Countries where software will be used and professional services rendered:</inlineHelpText>
    <label>Countries</label>
    <type>TextArea</type>
</CustomField>