Perkin-UAT/force-app/main/default/objects/INF_Contracts_Req__c/fields/NDA_only__c.field-meta.xml
<CustomField>
    <fullName>NDA_only__c</fullName>
    <inlineHelpText>NDA only: Other Party’s role</inlineHelpText>
    <label>NDA only</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospective Customer/Client</fullName>
            </value>
            <value>
                <fullName>Consultant    Vendor/Contractor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>