Perkin-UAT/force-app/main/default/objects/INF_Contracts_Req__c/fields/NDA_Only_General_Discription__c.field-meta.xml
<CustomField>
    <fullName>NDA_Only_General_Discription__c</fullName>
    <inlineHelpText>NDA only: General nature/description of confidential information that you may disclose to the other Party, if any (please include products you may discuss during your meetings):</inlineHelpText>
    <label>NDA Only General Discription</label>
    <type>TextArea</type>
</CustomField>