Perkin-UAT/force-app/main/default/objects/INF_Contracts_Req__c/fields/NDA_only_General_nature__c.field-meta.xml
<CustomField>
    <fullName>NDA_only_General_nature__c</fullName>
    <inlineHelpText>NDA only: General nature/description of confidential information that other Party may disclose to you if any:</inlineHelpText>
    <label>NDA only General nature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Sales presentation</fullName>
            </value>
            <value>
                <fullName>Product Development</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Customer Audit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>