Perkin-UAT/force-app/main/default/objects/INF_Contracts_Req__c/fields/NDAOnly__c.field-meta.xml
<CustomField>
    <fullName>NDAOnly__c</fullName>
    <inlineHelpText>NDA only: General Nature of discussion</inlineHelpText>
    <label>NDAOnly</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demo/Sales Presentation</fullName>
            </value>
            <value>
                <fullName>Product Development/Consulting</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>RFP/RFQ</fullName>
            </value>
            <value>
                <fullName>Finance Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>