Perkin-UAT/force-app/main/default/objects/INF_Contracts_Req__c/fields/Order_Background__c.field-meta.xml
<CustomField>
    <fullName>Order_Background__c</fullName>
    <inlineHelpText>Order Background (provide any pertinent information contracts should be aware of)</inlineHelpText>
    <label>Order Background</label>
    <type>TextArea</type>
</CustomField>