Perkin-UAT/force-app/main/default/objects/INF_Contracts_Req__c/fields/Other_Party_s_Role__c.field-meta.xml
<CustomField>
    <fullName>Other_Party_s_Role__c</fullName>
    <label>Other Party’s Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospective Customer</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>