Perkin-UAT/force-app/main/default/objects/INF_Contracts_Req__c/fields/Request_Date_INF__c.field-meta.xml
<CustomField>
    <fullName>Request_Date_INF__c</fullName>
    <label>Request Date</label>
    <type>DateTime</type>
</CustomField>