Perkin-UAT/force-app/main/default/objects/INF_Contracts_Req__c/fields/Spotfire__c.field-meta.xml
<CustomField>
    <fullName>Spotfire__c</fullName>
    <inlineHelpText>Spotfire: Has this been approved by Exceptions Approval
(Attach approval email to your request)</inlineHelpText>
    <label>Spotfire</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>