Perkin-UAT/force-app/main/default/objects/INF_Contracts_Req__c/fields/Status_INF__c.field-meta.xml
<CustomField>
    <fullName>Status_INF__c</fullName>
    <label>Status (Contract Team use only)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Request</fullName>
                <default>true</default>
                <label>Initial Request</label>
            </value>
            <value>
                <fullName>Request Acknowledged</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Internal Review</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Request Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Sent to Sales</fullName>
            </value>
            <value>
                <fullName>Sent to Customer</fullName>
            </value>
            <value>
                <fullName>Sent to Services</fullName>
            </value>
            <value>
                <fullName>In signature PKI</fullName>
            </value>
            <value>
                <fullName>In signature Customer</fullName>
            </value>
            <value>
                <fullName>Sent to Contracts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>