Perkin-UAT/force-app/main/default/objects/INF_Contracts_Req__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contracts_Name__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Customer_Application__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status_INF__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>